<resources>
    <string name="app_name">婚礼纪</string>
    <string name="app_name2">婚礼纪-结婚必备</string>
    <string name="action_album">相册</string>
    <string name="action_camera_photo">拍照</string>
    <string name="action_camera_video">摄像</string>
    <string name="action_connect_weibo">微博登录</string>
    <string name="action_connect_qq">QQ  登录</string>
    <string name="action_skip">跳过</string>
    <string name="action_ok">确定</string>
    <string name="action_save_exit">保存退出</string>
    <string name="action_exit">退出</string>
    <string name="action_ok2">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_logout">退出登录</string>
    <string name="action_copy">复制</string>
    <string name="action_reset">重置</string>
    <string name="all_city">全国</string>
    <string name="all_area">全城</string>
    <string name="label_alipay">支付宝支付</string>
    <string name="pay_result3">支付失败</string>
    <string name="pay_result4">取消支付</string>
    <string name="action_speak_start">按住说话</string>
    <string name="action_speak_done">松开结束</string>
    <string name="action_modify">修改</string>
    <string name="action_location">定位中</string>
    <string name="action_repeat">请重试</string>
    <string name="btn_preview_text">预览</string>
    <string name="btn_send">发送</string>
    <string name="btn_check_in">签到</string>
    <string name="btn_merchants">商家</string>
    <string name="btn_phone_code">获取验证码</string>
    <string name="btn_thread_collect">+ 关注</string>
    <string name="btn_thread_has_collected">已关注</string>
    <string name="btn_merchant_contact4">客服</string>
    <string name="btn_buy">立即购买</string>
    <string name="btn_buy_over">已抢光</string>
    <string name="btn_sold_out">已下架</string>
    <string name="btn_submit_order">提交订单</string>
    <string name="btn_add">立即添加</string>
    <string name="btn_see_winner_list">查看中奖名单</string>
    <string name="btn_send_comment2">发表评价</string>
    <string name="btn_back_default">恢复默认</string>
    <string name="btn_add_story">发表大作</string>
    <string name="btn_prices">价格</string>
    <string name="btn_colors">颜色</string>
    <string name="btn_submit">提交</string>
    <string name="btn_change_city">更改城市</string>
    <string name="btn_select_city">选择城市</string>
    <string name="btn_light_up_city">为%s投票</string>
    <string name="btn_is_light_up">去看看</string>
    <string name="btn_update">立即更新</string>
    <string name="btn_modified">修改婚期</string>
    <string name="btn_making">开始制作</string>
    <string name="btn_card_edit">编辑婚礼信息</string>
    <string name="btn_share_py">分享到朋友圈</string>
    <string name="btn_done">完成</string>
    <string name="btn_add_card">+ 创建请帖  </string>
    <string name="btn_choose_photos">选取照片</string>
    <string name="btn_use">使用</string>
    <string name="btn_look">去看看</string>
    <string name="btn_add_cover">添加照片</string>
    <string name="btn_change_avatar">更换照片</string>
    <string name="btn_confirm">确认添加</string>
    <string name="btn_cart">加入购物车</string>
    <string name="btn_add_car">挑选婚车</string>
    <string name="btn_i_see">我知道了</string>
    <string name="btn_add_page">添加拼图</string>
    <string name="city_search_hint">搜索你所选择的城市</string>
    <string name="colon">:</string>
    <string name="label_comprehensive">综合</string>
    <string name="description_hint">添加描述</string>
    <string name="fmt_card_time">yyyy年MM月dd日 HH时mm分</string>
    <string name="format_date">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date_type1">MM-dd HH:mm</string>
    <string name="format_date_type2">yyyy.MM.dd HH:mm</string>
    <string name="format_date_type4">yyyy.MM.dd</string>
    <string name="format_date_type7">yyyy年MM月dd日</string>
    <string name="format_date_type8">yyyy-MM-dd</string>
    <string name="format_date_type10">yyyy-MM-dd HH:mm</string>
    <string name="format_date_type11">MM月dd日</string>
    <string name="format_date_type12">下个月dd日</string>
    <string name="format_date_type13">本月dd日</string>
    <string name="format_date_type14">HH:mm</string>
    <string name="format_date_type15">MM-dd EEEE</string>
    <string name="format_date_type16">yyyy年MM月</string>
    <string name="format_date_type_tomorrow">明天</string>
    <string name="format_date_type_today">今天</string>
    <string name="format_count_down">%1$s小时%2$s分%3$s秒</string>
    <string name="format_count_down2">%1$s:%2$s:%3$s</string>
    <string name="format_count_down3">%1$s小时%2$s分</string>
    <string name="format_count_down4">%1$s天%2$s时%3$s分后结束</string>
    <string name="format_day">dd天</string>
    <string name="format_day2">dd</string>
    <string name="format_hour_minute">HH小时mm分</string>
    <string name="format_minute">mm分</string>
    <string name="face_001">[大笑]</string>
    <string name="face_002">[两眼放光]</string>
    <string name="face_003">[抠鼻]</string>
    <string name="face_004">[吐舌]</string>
    <string name="face_005">[委屈]</string>
    <string name="face_006">[微笑]</string>
    <string name="face_007">[吓]</string>
    <string name="face_008">[鄙视]</string>
    <string name="face_009">[闭嘴]</string>
    <string name="face_010">[不高兴]</string>
    <string name="face_011">[大哭]</string>
    <string name="face_012">[鼓掌]</string>
    <string name="face_013">[汗]</string>
    <string name="face_014">[酷]</string>
    <string name="face_015">[亲亲]</string>
    <string name="face_016">[生气]</string>
    <string name="face_017">[喜欢]</string>
    <string name="face_018">[晕]</string>
    <string name="face_019">[抓狂]</string>
    <string name="face_020">[打]</string>
    <string name="face_021">[哈欠]</string>
    <string name="face_022">[哼]</string>
    <string name="face_023">[撇嘴]</string>
    <string name="face_024">[睡觉]</string>
    <string name="face_025">[再见]</string>
    <string name="face_026">[坏笑]</string>
    <string name="face_027">[可怜]</string>
    <string name="face_028">[贱笑]</string>
    <string name="face_029">[疑问]</string>
    <string name="face_030">[无语]</string>
    <string name="face_031">[怒骂]</string>
    <string name="face_032">[困]</string>
    <string name="face_033">[口罩]</string>
    <string name="face_034">[赞]</string>
    <string name="face_035">[ok]</string>
    <string name="face_036">[耶]</string>
    <string name="format_date_wedding_time2">婚期 yyyy-MM-dd</string>
    <string name="face2_001">[:D]</string>
    <string name="face2_002">[(F)]</string>
    <string name="face2_003">[:-o]</string>
    <string name="face2_004">[:p]</string>
    <string name="face2_005">[:$]</string>
    <string name="face2_006">[):]</string>
    <string name="face2_007">[|-)]</string>
    <string name="face2_008">[8-)]</string>
    <string name="face2_009">[:-#]</string>
    <string name="face2_010">[:(]</string>
    <string name="face2_011"><![CDATA[[:\'(]]]></string>
    <string name="face2_012">[8-|]</string>
    <string name="face2_014">[(H)]</string>
    <string name="face2_015">[(|)]</string>
    <string name="face2_016">[(})]</string>
    <string name="face2_017">[({)]</string>
    <string name="face2_018">[+o(]</string>
    <string name="face2_019">[:@]</string>
    <string name="face2_020">[(u)]</string>
    <string name="face2_021">[(W)]</string>
    <string name="face2_022">[^o)]</string>
    <string name="face2_023">[:s]</string>
    <string name="face2_024">[(S)]</string>
    <string name="face2_025">[(R)]</string>
    <string name="face2_026">[8o|]</string>
    <string name="face2_027">[(k)]</string>
    <string name="face2_028">[(a)]</string>
    <string name="face2_029">[:-*]</string>
    <string name="face2_030">[:|]</string>
    <string name="face2_031">[(*)]</string>
    <string name="face2_032">[*-)]</string>
    <string name="face2_033">[(#)]</string>
    <string name="face2_034">[(D)]</string>
    <string name="face2_035">[;)]</string>
    <string name="face2_036"><![CDATA[[<o)]]]></string>
    <string name="hint_bride_name">新娘姓名</string>
    <string name="hint_wedding_address">婚礼地址</string>
    <string name="hint_wedding_time">婚礼时间</string>
    <string name="hint_wedding_speech">致宾客</string>
    <string name="hint_wedding_location">在地图上标注</string>
    <string name="hint_what_to_say">想说点什么呢？</string>
    <string name="hint_groom_name">新郎姓名</string>
    <string name="hint_edit_unconnected">你不能在未联网状态下修改已上传的故事</string>
    <string name="hint_upload_unconnected">请确保网络连接后再上传故事</string>
    <string name="hint_story_title_empty">请先编写故事标题</string>
    <string name="hint_story_cover_empty">请先选择故事封面</string>
    <string name="hint_story_title">写个标题</string>
    <string name="hint_story_cover">选个封面</string>
    <string name="hint_story_private">是否公开</string>
    <string name="hint_story_back">你是否放弃本次修改</string>
    <string name="hint_story_back2">你的修改未保存，是否退出</string>
    <string name="hint_choose_photo_limit_out">你选择的照片数量已经超过限制了</string>
    <string name="hint_post_photos_limit">你最多只能选择九张图片</string>
    <string name="hint_post_text_empty">你发送的内容不能为空</string>
    <string name="hint_detele_reply">确定要删除该条评论</string>
    <string name="hint_detele_item">确定要删除该条内容</string>
    <string name="hint_detele_sign">确定要删除该条反馈</string>
    <string name="label_delete">删除</string>
    <string name="label_edit">编辑</string>
    <string name="label_close">关闭</string>
    <string name="label_report_explain">投诉说明</string>
    <string name="label_report_reason">投诉原因</string>
    <string name="label_select_time">选择时间</string>
    <string name="red_packet_q1">Q：什么是婚礼纪红包？</string>
    <string name="red_packet_q2">Q：如何使用红包？</string>
    <string name="red_packet_q3">Q：什么时候能使用红包？</string>
    <string name="red_packet_q4">Q：红包的使用有什么限制吗？</string>
    <string name="red_packet_q5">Q：申请退款时红包如何结算？</string>
    <string name="red_packet_q6">Q：红包可以找零或兑换吗？</string>
    <string name="red_packet_a1">A：婚礼纪红包（以下简称“红包”）是婚礼纪发行的购买代金劵，红包可以在购买本地服务套餐时抵扣相应的订单金额。</string>
    <string name="red_packet_a2">A：你可以在支付订单页面通过“婚礼纪红包”选项使用一个符合适用条件的红包，抵扣相应的金额。</string>
    <string name="red_packet_a3">A：红包仅限全款支付和余款支付时使用。</string>
    <string name="red_packet_a4">A：红包的使用时限和订单限额请参见红包上的文字描述。</string>
    <string name="red_packet_a5">A：如果单笔订单的金额因为其中商品退款而导致不满足红包使用条件，需扣除红包相应的金额。</string>
    <string name="red_packet_a6">A：不可以。用户选择使用红包支付订单时将优先使用红包抵扣订单金额。红包金额高于订单金额的，差额部分不找零或兑换。</string>
    <string name="story_upload2">同步</string>
    <string name="hint_select_report_reason">请选择投诉原因</string>
    <string name="hint_enter_report_explain">请输入投诉说明(可不填)</string>
    <string name="label_submit_report">提交投诉信息</string>
    <string name="label_reply2">回复</string>
    <string name="label_report">举报</string>
    <string name="label_copy">复制</string>
    <string name="label_work_installment_each2">*</string>
    <string name="label_coupon_q1">Q: 什么是商家优惠券？</string>
    <string name="label_coupon_q2">Q: 优惠券的使用有什么限制吗？</string>
    <string name="label_coupon_q3">Q: 优惠券是否可以叠加使用？</string>
    <string name="label_coupon_q4">Q: 优惠券如何领取？</string>
    <string name="label_coupon_q5">Q: 如何使用优惠券？</string>
    <string name="label_coupon_q6">Q: 优惠券可以找零和兑换吗？</string>
    <string name="label_coupon_q7">Q: 申请退款时优惠券如何结算?</string>
    <string name="label_coupon_a1">A: 商家优惠券（以下简称“优惠券”）是由商家自主发布的代金券，可以在购买该商家套餐时抵扣相应的订单金额。</string>
    <string name="label_coupon_a2">A: 优惠券仅限购买其发放商家的套餐时使用，使用时限和订单限额请参见优惠券上的文字描述，使用时以实际支付为准。根据使用条件，优惠券可分满减劵和现金券两种，以下为详细说明：\n（1）.满减劵：使用受订单金额的限制。例如：某婚纱摄影套餐满5000减200元优惠券，需要在订单金额中，某婚纱摄影套餐购买金额大于或等于5000元时才可减免200元。\n（2）.现金券：不受订单金额限制，可无门槛使用。比如：某婚纱摄影套餐立减优惠券，购买某婚纱摄影套餐时可减免200元。</string>
    <string name="label_coupon_a3">A: 单张订单最多只能使用一张优惠券，满减券和现金券不允许同时使用。优惠券和平台红包可以叠加使用。</string>
    <string name="label_coupon_a4">A: 若商家有发放优惠券，用户可在该商家主页和套餐详情页进行领取。</string>
    <string name="label_coupon_a5">A:（1）.第一步：用户在线选购完套餐商品后，进入结算页面，点击“商家优惠券“；\n第二步：系统会列出可使用的优惠券，选择一张券后提交订单即可。\n（2）.领取的优惠券也可用于线下到店使用，具体细则可与到店的商家沟通。</string>
    <string name="label_coupon_a6">A: 优惠券不能兑换现金，每张优惠券仅能使用一次，不找零，不退换，优惠券应在券面标示或系统显示的有效期内使用，过期作废。</string>
    <string name="label_coupon_a7">A: 使用优惠券的订单，若发生订单退款，购买单个套餐的优惠，按购买套餐时实际支付金额退款，已使用优惠券不退还。\n注：由于商家主动改价造成订单价格不满足优惠券使用条件时，已和订单绑定的优惠券仍然有效</string>
</resources>