<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_packet_q1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a1"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/red_packet_q2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a2"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/red_packet_q3"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a3"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/red_packet_q4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a4"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/red_packet_q5"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a5"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/red_packet_q6"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text_size1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/red_packet_a6"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/medium_text_size2" />

    </LinearLayout>
</ScrollView>