<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_reply"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_reply2"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:id="@+id/line_layout3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_copy"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:id="@+id/line_layout"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_report"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:id="@+id/line_layout2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_delete"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/action_cancel"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />
</LinearLayout>