<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/action_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_edit"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/action_sync"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/story_upload2"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/action_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/label_delete"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/action_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/action_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/ex_medium_text_size" />
</LinearLayout>