<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_report_reason"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_work_installment_each2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/medium_text_size1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_reason_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/sl_color_white_2_background2"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/tv_report_reason"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_select_report_reason"
                    android:textColor="@color/colorBlack2"
                    android:textColorHint="@color/colorGray2"
                    android:textSize="@dimen/medium_text_size1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/icon_arrow_right_gray_14_26" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/label_report_explain" />

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="top"
                android:hint="@string/hint_enter_report_explain"
                android:minHeight="150dp"
                android:paddingBottom="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="14dp"
                android:textColor="@color/colorBlack2"
                android:textColorHint="@color/colorGray2"
                android:textSize="@dimen/medium_text_size1" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="280dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/sl_r18_primary_2_dark"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/label_submit_report"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ex_medium_text_size" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>