<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/label_close"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/label_select_time"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text_size"/>

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:paddingBottom="8dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/action_ok"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <kankan.wheel.widget.DatePickerView
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>